- fix: scrollbar horizontal issue for desktop

--- a/src/assets/styles/components/view.css
+++ b/src/assets/styles/components/view.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   width: 100vw;
   position: absolute;
+  overflow-y: scroll; /* See styles/elements/body.css for info */
   transition: background 0.75s ease;
 }
 .view--blue {
